[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ex_package_img"
version = "0.0.1"
authors = [
  { name="Fabricio K.", email="fkay13@gmail.com" },
]
description = "A small example package with image processing"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "scikit-image ~= 0.24.0",
    "numpy ~= 2.1.0",
    "matplotlib ~= 3.9.2"
]

[project.urls]
Homepage = "https://github.com/fkay13/sampleproject"
Issues = "https://github.com/fkay13/sampleproject/issues"

